OWN-362 Add a service to send a dev request by email
